# botasaurus-v1

./: .gitignore  pyproject.toml  requirements.txt
botasaurus/: __init__.py  anti_detect_driver.py  captcha.py  create_driver_utils.py  shortcuts.py
tests/: __init__.py  constants.py  mockers.py
tests/anti_detect_driver/: base.py  test_execute_scripts.py
