[tool.poetry]
name = "botasaurus2"
version = "0.1.0"
description = "Patching fork of botasaurus, The All in One Framework to build Awesome Scrapers."
authors = ["Chetan Jain"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
